--- a/pages/menu/uploads/uploads.css
+++ b/pages/menu/uploads/uploads.css
@@ -1,7 +1,6 @@
 .main-view {
     width: 100%; 
     height: 100%;
-    margin-top: 7vw;
     top: 0; 
     left: 0; 
     position: fixed; 
@@ -11,7 +10,7 @@
 }
   /* The grid: Four equal columns that floats next to each other */
   .gallery-column {
-    width: 100%;
+    width: 100%; 
     height: auto;
     text-align: center;
   }
@@ -47,8 +46,8 @@
   }
 
   .highlighted-image img {
-    width: 50%;
-    height: auto;
+    width: auto;
+    height: 100%;
   }
   
   /* Expanding image text */
@@ -80,6 +79,7 @@
     text-align: center;
     font-family: lobster;
     font-size: 5vw;
+    margin-top: 8vw;
     margin-bottom: 5vw;
     text-decoration: underline;
   }
