--- a/m/pages/home-page/countdown/countdown.component.html
+++ b/m/pages/home-page/countdown/countdown.component.html
@@ -17,8 +17,9 @@
       <p id="secondsLeftDescription"></p>
     </div>
     <div class="icon">
-      <i class="fa fa-heart" aria-hidden="true" style="position: absolute;"></i>
-      <div id="srdiecko" style="position: absolute; font-size: 2vh; color: rgb(255, 253, 147); -webkit-text-stroke-width: 0.02vh;">J+W<br> = <br>VL</div>
+      <a href="https://www.google.sk/maps/place/Gr%C3%A9ckokatol%C3%ADcky+chr%C3%A1m+Ochrany+Presv%C3%A4tej+Bohorodi%C4%8Dky/@49.0000416,22.2247396,18.5z/data=!4m15!1m8!3m7!1s0x4739503cc091f9d3:0xa7ab3a24efde985d!2zMDY3IDYxIFN0YWvEjcOtbg!3b1!8m2!3d49.0018008!4d22.229107!16s%2Fm%2F026j6yl!3m5!1s0x47394fd783beeff7:0x44889de2548217dc!8m2!3d49.0005645!4d22.2263772!16s%2Fg%2F11hbgjftjl?entry=ttu" style="all: inherit;">
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+      </a>
     </div>
   </div>
 </div>
