--- a/m/pages/questionnaire-page/questionnaire-page.component.css
+++ b/m/pages/questionnaire-page/questionnaire-page.component.css
@@ -13,20 +13,20 @@
     max-width: 93%;
     text-align: center;
     height: auto;
-    font-size: 3vh;
-    font-family: 'Lobster';
-    color: #d9a74a;
+    font-size: 5vh;
+    font-family: var(--fontFamily);
+    color: var(--borderColor);
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
   }
 
 .evaluation {
-  font-size: 4vh;
-  color: rgb(218, 98, 12);
+  font-size: 5vh;
+  color: var(--invitationHeaderColor);
 }
 
 .form-person p {
-  color: rgb(218, 98, 12);
+  color: var(--invitationHeaderColor);
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
 }
@@ -46,16 +46,16 @@
 	border: none;
   position: absolute; 
   right: 0; 
-  bottom: -3vh;
   display: flex;
   align-items: center;
-  font-size: 2vh;
-  font-family: 'Lobster';
+  font-size: 4vh;
+  font-family: var(--fontFamily);
   cursor: pointer;
-  color: rgb(218, 98, 12);
+  color: var(--invitationHeaderColor);
   transition: color 0.3s;
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
+  margin-top: 2vh;
 }
 
 .next-button:hover {
@@ -70,9 +70,9 @@
   align-items: center;
   justify-content: center;
   font-size: 2vh;
-  font-family: 'Lobster';
+  font-family: var(--fontFamily);
   cursor: pointer;
-  color: #d9a74a;
+  color: var(--borderColor);
   transition: color 0.3s;
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
@@ -102,57 +102,41 @@ input[type=date] {
   font-size: 2vh;
   border-radius: 1vh;
   padding: 0.5vh 1vh;
-  font-family: 'Lobster';
-  background-color: rgb(255, 253, 147);
-  color: #d9a74a;
+  font-family: var(--fontFamily);
+  background-color: var(--backgroundColor);
+  color: var(--borderColor);
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
-}
-
-input[type=text-age] {
-  width: 15vh;
-  height: auto;
-  font-size: 2vh;
-  border-radius: 1vh;
-  padding: 0.5vh 1vh;
-  font-family: 'Lobster';
-  background-color: rgb(255, 253, 147);
-  color: #d9a74a;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: black;
-  text-align: center;
 }
 
 input[type=number] {
   text-align: center;
   width: 9vh;
   height: auto;
-  font-size: 2vh;
+  font-size: 4vh;
   border-radius: 1vh;
   padding: 0.5vh 1vh;
-  font-family: 'Lobster';
-  border-color: rgb(255, 253, 147);
-  background-color: rgb(255, 253, 147);
-  color: #d9a74a;
+  font-family: var(--fontFamily);
+  background-color: var(--backgroundColor);
+  color: var(--borderColor);
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
 }
 
 .submit-button {
-  background-color: #1abc5d;
+  background-color: #ffffff;
   border-radius: 1.5vh;
   border-style: solid;
-  color: #F082AC;
+  color: #000000;
   cursor: pointer;
-  font-family: 'Lobster';
-  font-size: 2.5vh;
+  font-family: var(--fontFamily);
+  font-size: 5vh;
   height: auto;
   padding: 2vh;
   text-align: center;
   text-decoration: none;
   transition: background-color 0.3s, color 0.3s;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  border-color: black;
 }
 
 .submit-button:hover,
