--- a/pages/home-page/invitation-header/invitation-header.component.css
+++ b/pages/home-page/invitation-header/invitation-header.component.css
@@ -1,6 +1,6 @@
 
 .frame-invitation-header {
-    font-family: 'Lobster';
+    font-family: var(--fontFamily);
     -webkit-text-stroke-color: black;
     line-height: 2vw;
     position: fixed;
@@ -24,22 +24,23 @@
 }
 
 .wrapper-invitation-header {
-    font-size: 2.8vw;
-    color: rgb(218, 98, 12);
+    font-size: 4vw;
+    color: var(--invitationHeaderColor);
     -webkit-text-stroke-width: 0.5px;
     position: relative;
 }
 
 .details-invitation-header {
     font-size: 1vw; 
-    color: rgb(218, 98, 12);
+    color: var(--invitationHeaderColor);
     -webkit-text-stroke-width: 0.4px;
     -webkit-text-stroke-color: black;
     transition: color 0.3s;
     position: absolute;
+    margin-top: 3vh;
     right: 0;
   }
 
   .details-invitation-header:hover {
-    color: rgb(36, 184, 17);
+    color: var(--detailsOrHomeHoverColor);
   }
