--- a/pages/home-page/questionnaire-redirection/questionnaire-redirection.component.css
+++ b/pages/home-page/questionnaire-redirection/questionnaire-redirection.component.css
@@ -28,17 +28,30 @@
   height: auto;
 }
 
-.person {
+.person-man {
   width: 12vw;
   height: auto;
   transition: width 0.5s;
 
-  animation-name: person-zoom;
+  animation-name: person-man-zoom;
   animation-duration: 2s;
 }
 
-.person:hover {
+.person-woman {
+  width: 10vw;
+  height: auto;
+  transition: width 0.5s;
+
+  animation-name: person-woman-zoom;
+  animation-duration: 2s;
+}
+
+.person-man:hover {
   width: 14vw;
+}
+
+.person-woman:hover {
+  width: 12vw;
 }
 
 .collection-wrapper:hover .oblacik {
@@ -78,7 +91,12 @@
   100% { visibility: hidden; }
 }
 
-@keyframes person-zoom {
+@keyframes person-man-zoom {
   50% { width: 14vw; }
   100% { width: 12vw; }
+}
+
+@keyframes person-woman-zoom {
+  50% { width: 12vw; }
+  100% { width: 10vw; }
 }
