--- a/m/pages/menu/our-story/our-story.css
+++ b/m/pages/menu/our-story/our-story.css
@@ -21,6 +21,7 @@
 
 .story-text {
     position: relative;
+    font-weight: bolder;
     margin-top: 5vh;
     font-size: 4vh;
     font-family: var(--fontFamily);
