--- a/globals.css
+++ b/globals.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Italianno&family=Lobster&display=swap');
 :root {
     
-    --borderColor: #d9a74a;
+    --borderColor: #000000;
     --backgroundColor: rgb(255, 253, 147);
-    --invitationHeaderColor: rgb(218, 98, 12);
+    --invitationHeaderColor: rgb(0, 0, 0);
     --startButtonHoverColor: rgb(255, 253, 100);
     --detailsOrHomeHoverColor: rgb(36, 184, 17);
     --fontFamily: italianno;
