--- a/m/app.component.css
+++ b/m/app.component.css
@@ -10,9 +10,21 @@ body, html {
   left: 0; 
   width: 100%; 
   height: 100%; 
-  border: 2vh solid var(--borderColor); 
   box-sizing: border-box;
   background-color: var(--backgroundColor);
+}
+
+.background-picture-app {
+    background-image: url("../assets/images/drevo-pozadie.jpg");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 200%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 0;
 }
 
 .flower-app {
