--- a/m/names-header/names-header.component.css
+++ b/m/names-header/names-header.component.css
@@ -15,12 +15,27 @@
     top: 0vh;
 }
 
+.background-picture {
+    background-image: url("../assets/images/drevo.png");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 0;
+}
+
 .menu-wrapper-names-header {
     text-align: center;
     transition: max-height 1s;
     max-height: 0;
     overflow: hidden;
     line-height: 4.25vh;
+    position: relative;
+    z-index: 1;
 }
 
 .menu-wrapper-names-header li {
@@ -53,6 +68,8 @@
     font-family: var(--fontFamily);
     font-size: 5vh;
     color: var(--borderColor);
+    position: relative;
+    z-index: 1;
 }
 
 .menu-title {
@@ -60,6 +77,8 @@
     margin-top: 1vh;
     font-family: var(--fontFamily);
     color: var(--borderColor);
+    position: relative;
+    z-index: 1;
 }
 
 @keyframes header-slide {
