--- a/m/pages/home-page/countdown/countdown.component.css
+++ b/m/pages/home-page/countdown/countdown.component.css
@@ -17,6 +17,19 @@
   right: 0;
 }
 
+.background-picture {
+    background-image: url("../assets/images/drevo.png");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 0;
+}
+
 .count-down-timer > p {
   margin: 0;
 }
@@ -26,6 +39,8 @@
   grid-template-columns: repeat(5, calc(20% - 1vh));
   grid-column-gap: 0.5vh;
   margin-left: 2.5vh;
+  position: relative;
+  z-index: 1;
 }
 
 .times {
@@ -33,6 +48,8 @@
   grid-template-columns: repeat(5, calc(20% - 1vh));
   grid-column-gap: 0.5vh;
   margin-left: 2.5vh;
+  position: relative;
+  z-index: 1;
 }
 
 .description {
@@ -40,6 +57,8 @@
   grid-template-columns: repeat(5, calc(20% - 1vh));
   grid-column-gap: 0.5vh;
   margin-left: 2.5vh;
+  position: relative;
+  z-index: 1;
 }
 
 .description > p {
@@ -47,16 +66,6 @@
   font: normal 3vh var(--fontFamily);
   margin: 0;
   margin-bottom: 1vh;
-}
-
-.times p ::ng-deep img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 8vh;
-  display: block;
-  height: 30px;
 }
 
 .times p {
@@ -72,6 +81,12 @@
 }
 }
 
+#weddingDate {
+  font-weight: bolder;
+  position: relative;
+  z-index: 1;
+}
+
 .icon {
   text-align: center;
   font-size: 14vh;
@@ -79,6 +94,7 @@
   -webkit-text-stroke-width: 0.1vh;
   -webkit-text-stroke-color: black;
   position: relative;
+  z-index: 1;
 }
 
 #slide-countdown {
