--- a/m/pages/home-page/countdown/countdown.component.html
+++ b/m/pages/home-page/countdown/countdown.component.html
@@ -1,5 +1,6 @@
 
 <div class="count-down-timer" id="slide-countdown">
+  <div class="background-picture"></div>
   <p id="weddingDate" style="margin-top: 1vh;">Lásku si sľúbime </p>
   <div class="wrapper">
     <div class="times">
