--- a/names-header/names-header.component.css
+++ b/names-header/names-header.component.css
@@ -13,12 +13,27 @@
     top: 0vw;
 }
 
+.background-picture {
+    background-image: url("assets/images/drevo.png");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 0;
+}
+
 .menu-wrapper-names-header {
     text-align: center;
     transition: max-height 0.5s;
     max-height: 0;
     overflow: hidden;
     line-height: 3vw;
+    position: relative;
+    z-index: 1;
 }
 
 .title-names-header:hover .menu-wrapper-names-header {
@@ -55,6 +70,8 @@
     font-family: var(--fontFamily);
     font-size: 4vw;
     color: var(--borderColor);
+    position: relative;
+    z-index: 1;
 }
 
 .menu-title {
@@ -66,6 +83,7 @@
     color: var(--borderColor);
     
     margin-bottom: 3vh;
+    z-index: 1;
 }
 
 @keyframes header-slide {
