--- a/pages/home-page/countdown/countdown.component.css
+++ b/pages/home-page/countdown/countdown.component.css
@@ -5,7 +5,7 @@
     width: 50vw;
     margin: 0 auto;
     color: var(--borderColor);
-    border-radius: 6px 6px 0px 0px;
+    border-radius: 30px 30px 0px 0px;
     padding: 0 auto;
     font-family: var(--fontFamily);
     font-size: 3vw;
@@ -13,28 +13,54 @@
     position: fixed;
     left: 0;
     right: 0;
+    background-image: url("assets/images/drevo.avif");
+    background-size: 100% 100%;
+  }
+
+  .background-picture {
+      background-image: url("assets/images/drevo.png");
+      background-size: 100% 100%;
+      height: 100%;
+      width: 100%;
+      border-radius: inherit;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0.7;
+      z-index: 0;
   }
   
   .count-down-timer > p {
     margin: 0;
+  }
+
+  #weddingDate {
+    position: relative;
+    z-index: 1;
   }
   
   .wrapper .times .description {
     display: grid;
     grid-template-columns: repeat(5, calc(20% - 10px));
     grid-column-gap: 10px;
+    position: relative;
+    z-index: 1;
   }
   
   .times {
     display: grid;
     grid-template-columns: repeat(5, calc(20% - 10px));
     grid-column-gap: 10px;
+    position: relative;
+    z-index: 1;
   }
   
   .description {
     display: grid;
     grid-template-columns: repeat(5, calc(20% - 10px));
     grid-column-gap: 10px;
+    position: relative;
+    z-index: 1;
   }
   
   .description > p {
