--- a/pages/menu/logistics/logistics.css
+++ b/pages/menu/logistics/logistics.css
@@ -24,6 +24,7 @@
     position: relative;
     margin-top: 5vw;
     font-size: 2vw;
+    font-weight: bolder;
     font-family: var(--fontFamily);
     line-height: 3vw;
     margin-left: 17vw;
