--- a/names-header/names-header.component-m.css
+++ b/names-header/names-header.component-m.css
@@ -5,8 +5,8 @@
     -webkit-text-stroke-color: black;
     background-color: var(--backgroundColor);
     box-shadow: 0px 0px 8px 8px rgb(0 0 0 / 15%);
-    width: 32vh;
-    border-radius: 0px 0px 6vh 6vh;
+    width: 34vh;
+    border-radius: 0px 0px 1vh 6vh;
     text-align: center;
     left: 0;
     right: 0;
@@ -14,18 +14,18 @@
     margin: 0 auto;
     top: 0vh;
 }
-
+  
 .background-picture {
-    background-image: url("../assets/images/drevo.png");
-    background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    border-radius: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.7;
-    z-index: 0;
+  background-image: url("assets/images/drevo.png");
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: 0;
 }
 
 .menu-wrapper-names-header {
@@ -78,6 +78,14 @@
     font-family: var(--fontFamily);
     color: var(--borderColor);
     position: relative;
+    z-index: 1;
+}
+
+.menu-hint {
+    position: absolute;
+    bottom: 0.5vh;
+    right: 1vh;
+    font-size: 2vh;
     z-index: 1;
 }
 
