--- a/names-header/names-header.component.css
+++ b/names-header/names-header.component.css
@@ -1,29 +1,31 @@
 
 .title-names-header {
-    position: relative;
+    position: fixed;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
     background-color: var(--backgroundColor);
     box-shadow: 0px 0px 8px 8px rgb(0 0 0 / 15%);
-    width: 27vw;
-    border-radius: 0px 0px 6vw 6vw;
-    text-align: center;
+    width: 28vw;
+    border-radius: 0px 0px 1vw 6vw;
+    left: 0;
+    right: 0;
     padding: 0 auto;
     margin: 0 auto;
     top: 0vw;
+    text-align: center;
 }
-
+  
 .background-picture {
-    background-image: url("assets/images/drevo.png");
-    background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    border-radius: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.7;
-    z-index: 0;
+  background-image: url("assets/images/drevo.png");
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: 0;
 }
 
 .menu-wrapper-names-header {
@@ -38,6 +40,10 @@
 
 .title-names-header:hover .menu-wrapper-names-header {
     max-height: 30vw;
+}
+
+.title-names-header:hover .menu-hint {
+    display: none;
 }
 
 .menu-wrapper-names-header li {
@@ -65,7 +71,6 @@
 
 .names-in-header {
     margin: 0;
-    margin-bottom: 2vh;
     padding: 0;
     font-family: var(--fontFamily);
     font-size: 4vw;
@@ -81,8 +86,15 @@
     font-size: 4vw;
     font-family: var(--fontFamily);
     color: var(--borderColor);
-    
     margin-bottom: 3vh;
+    z-index: 1;
+}
+
+.menu-hint {
+    position: absolute;
+    bottom: 0.5vw;
+    right: 1vw;
+    font-size: 2vw;
     z-index: 1;
 }
 
