--- a/pages/home-page/countdown/countdown.component-m.css
+++ b/pages/home-page/countdown/countdown.component-m.css
@@ -7,7 +7,7 @@
   height: 42vh;
   margin: 0 auto;
   color: var(--borderColor);
-  border-radius: 6px 6px 0px 0px;
+  border-radius: 6vh 6vh 0px 0px;
   padding: 0 auto;
   font-family: var(--fontFamily);
   font-size: 3vh;
@@ -16,18 +16,18 @@
   left: 0;
   right: 0;
 }
-
+  
 .background-picture {
-    background-image: url("../assets/images/drevo.png");
-    background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    border-radius: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.7;
-    z-index: 0;
+  background-image: url("assets/images/drevo.png");
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: 0;
 }
 
 .count-down-timer > p {
@@ -66,6 +66,24 @@
   font: normal 3vh var(--fontFamily);
   margin: 0;
   margin-bottom: 1vh;
+  position: relative;
+  z-index: 1;
+}
+
+#weddingDate {
+  position: relative;
+  z-index: 1;
+  font-weight: bolder;
+}
+
+.times p ::ng-deep img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 8vh;
+  display: block;
+  height: 30px;
 }
 
 .times p {
@@ -81,12 +99,6 @@
 }
 }
 
-#weddingDate {
-  font-weight: bolder;
-  position: relative;
-  z-index: 1;
-}
-
 .icon {
   text-align: center;
   font-size: 14vh;
@@ -94,7 +106,17 @@
   -webkit-text-stroke-width: 0.1vh;
   -webkit-text-stroke-color: black;
   position: relative;
+}
+
+.quiz-label {
+  position: absolute; 
   z-index: 1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  font-weight: bolder;
+  font-size: 4vh;
+  margin-bottom: 1vh;
 }
 
 #slide-countdown {
