--- a/pages/home-page/countdown/countdown.component.css
+++ b/pages/home-page/countdown/countdown.component.css
@@ -5,7 +5,7 @@
     width: 50vw;
     margin: 0 auto;
     color: var(--borderColor);
-    border-radius: 30px 30px 0px 0px;
+    border-radius: 6vw 6vw 0px 0px;
     padding: 0 auto;
     font-family: var(--fontFamily);
     font-size: 3vw;
@@ -13,30 +13,23 @@
     position: fixed;
     left: 0;
     right: 0;
-    background-image: url("assets/images/drevo.avif");
-    background-size: 100% 100%;
-  }
-
+  } 
+  
   .background-picture {
-      background-image: url("assets/images/drevo.png");
-      background-size: 100% 100%;
-      height: 100%;
-      width: 100%;
-      border-radius: inherit;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0.7;
-      z-index: 0;
-  }
+    background-image: url("assets/images/drevo.png");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 0;
+}
   
   .count-down-timer > p {
     margin: 0;
-  }
-
-  #weddingDate {
-    position: relative;
-    z-index: 1;
   }
   
   .wrapper .times .description {
@@ -62,6 +55,11 @@
     position: relative;
     z-index: 1;
   }
+
+  #weddingDate {
+    position: relative;
+    z-index: 1;
+  }
   
   .description > p {
     margin-bottom: 2vw;
@@ -76,6 +74,14 @@
     margin: -2vw;
     font: normal 8vw var(--fontFamily);
   }
+
+  .quiz-label {
+    position: relative; 
+    z-index: 1;
+    font-weight: bolder;
+    font-size: 3vw;
+    margin-bottom: 1vh;
+  }
   
   @media screen and (max-width: 8vw) {
     .count-down-timer {
@@ -84,7 +90,7 @@
   }
   
   #slide-countdown {
-      bottom: -21vw;
+      bottom: -29vw;
       -webkit-animation: slide-countdown 5s forwards;
       -webkit-animation-delay: 0s;
       animation: slide-countdown 5s forwards;
