--- a/pages/menu/logistics/logistics-m.css
+++ b/pages/menu/logistics/logistics-m.css
@@ -1,7 +1,8 @@
+
 .main-view {
     width: 100%; 
     height: 100%;
-    margin-top: 7vh;
+    margin-top: 10vh;
     top: 0; 
     left: 0; 
     position: fixed; 
@@ -19,31 +20,22 @@
     -webkit-text-stroke-color: black;
 }
 
-.story-text {
+.info-text {
     position: relative;
-    font-weight: bolder;
     margin-top: 5vh;
     font-size: 4vh;
     font-family: var(--fontFamily);
-    line-height: 4vh;
-    margin-left: 9vw;
-    margin-right: 9vw;
-    margin-bottom: 10vh;
+    line-height: 5vh;
+    margin-left: 17vw;
+    margin-right: 17vw;
 }
 
-.image-together {
-    width: 20vh;
+.image-bus {
+    width: 18vh;
     height: auto;
-    position: absolute;
+    position: relative;
     border-radius: 2vh;
     box-shadow: 5px 5px 5px 5px;
-    opacity: 0.4;
-}
-
-.image-left {
-    top: 60vh; left: 17vw; rotate: -10deg;
-}
-
-.image-right {
-    top: 20vh; right: 17vw; rotate: 10deg;
+    opacity: 0.8;
+    text-align: center;
 }
