--- a/pages/menu/our-story/our-story-m.css
+++ b/pages/menu/our-story/our-story-m.css
@@ -1,8 +1,7 @@
-
 .main-view {
     width: 100%; 
     height: 100%;
-    margin-top: 10vh;
+    margin-top: 7vh;
     top: 0; 
     left: 0; 
     position: fixed; 
@@ -20,23 +19,30 @@
     -webkit-text-stroke-color: black;
 }
 
-.info-text {
-    font-weight: bolder;
+.story-text {
     position: relative;
     margin-top: 5vh;
     font-size: 4vh;
     font-family: var(--fontFamily);
-    line-height: 5vh;
-    margin-left: 17vw;
-    margin-right: 17vw;
+    line-height: 4vh;
+    margin-left: 9vw;
+    margin-right: 9vw;
+    margin-bottom: 10vh;
 }
 
-.image-bus {
-    width: 18vh;
+.image-together {
+    width: 20vh;
     height: auto;
-    position: relative;
+    position: absolute;
     border-radius: 2vh;
     box-shadow: 5px 5px 5px 5px;
-    opacity: 0.8;
-    text-align: center;
+    opacity: 0.4;
+}
+
+.image-left {
+    top: 60vh; left: 17vw; rotate: -10deg;
+}
+
+.image-right {
+    top: 20vh; right: 17vw; rotate: 10deg;
 }
