--- a/pages/home-page/photo-upload/upload.css
+++ b/pages/home-page/photo-upload/upload.css
@@ -77,6 +77,7 @@
   position: absolute;
   font-family: var(--fontFamily);
   font-size: 1.2vw;
+  font-weight: bolder;
   top: 1.6vw;
   right: 1.2vw;
 }
