--- a/pages/gate/gate-m.css
+++ b/pages/gate/gate-m.css
@@ -51,5 +51,5 @@ color: olive;
 }
 
 .hint {
-    font-size: 3vh; font-family: inherit; position: absolute; top: 0; text-align: center;
+    font-size: 3vh;
 }
