--- a/pages/gate/gate-m.css
+++ b/pages/gate/gate-m.css
@@ -47,5 +47,9 @@ color: olive;
 }
 
 .ram {
-    width: 30vh; height: 50vh; position: absolute;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
