--- a/components/home-button.html
+++ b/components/home-button.html
@@ -1,7 +1,7 @@
 
 <style>
     .home-button {
-    position: fixed; 
+    position: absolute; 
     left: 8vw; 
     top: 8vw;
     display: flex;
@@ -14,6 +14,7 @@
     transition: color 0.3s;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
+    z-index: 1;
     }
 
     .home-button:hover {
