--- a/pages/menu/our-story/our-story-m.css
+++ b/pages/menu/our-story/our-story-m.css
@@ -1,7 +1,6 @@
 .main-view {
     width: 100%; 
     height: 100%;
-    margin-top: 7vh;
     top: 0; 
     left: 0; 
     position: fixed; 
@@ -13,36 +12,66 @@
 .main-title {
     position: relative;
     font-size: 5vh;
-    color: var(--invitationHeaderColor);
+    color: white;
     font-family: var(--fontFamily);
-    -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
+    margin-top: 7vh;
 }
 
-.story-text {
+.photo-line {
     position: relative;
-    margin-top: 5vh;
-    font-size: 4vh;
+    box-sizing: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.between-text {
+    position: relative;
     font-family: var(--fontFamily);
-    line-height: 4vh;
-    margin-left: 9vw;
-    margin-right: 9vw;
-    margin-bottom: 10vh;
+    font-size: 5vh; 
+    color: white;
 }
 
-.image-together {
-    width: 20vh;
+.image-bigger {
+    width: 15vh;
     height: auto;
-    position: absolute;
-    border-radius: 2vh;
-    box-shadow: 5px 5px 5px 5px;
-    opacity: 0.4;
+    position: relative;
 }
 
-.image-left {
-    top: 60vh; left: 17vw; rotate: -10deg;
+.image-smaller {
+    width: 10vh;
+    height: auto;
+    position: relative;
 }
 
-.image-right {
-    top: 20vh; right: 17vw; rotate: 10deg;
+.dots {
+    font-size: 10vh;
+    word-spacing: 3vh;
+    color: white;
+}
+
+.ramik {
+    background-image: url("assets/images/spolu/ramik.png");
+    background-size: 100% auto;
+    width: 22vh;
+    height: 24vh;
+    background-repeat: no-repeat;
+    text-align: center;
+    position: relative;
+}
+
+.image-ramik {
+    position: relative;
+    top: 3vh;
+    left: 3.5vh;
+    width: 15vh;
+    height: 12vh;
+    overflow: hidden;
+}
+
+.text-under-photo {
+    position: relative;
+    top: 6vh;
+    font-family: var(--fontFamily);
+    font-size: 2vh;
 }
