--- a/pages/menu/logistics/logistics-m.css
+++ b/pages/menu/logistics/logistics-m.css
@@ -25,6 +25,7 @@
     margin-top: 5vh;
     font-size: 4vh;
     font-family: var(--fontFamily);
+    font-weight: bolder;
     line-height: 5vh;
     margin-left: 17vw;
     margin-right: 17vw;
