--- a/pages/menu/logistics/logistics.css
+++ b/pages/menu/logistics/logistics.css
@@ -25,6 +25,7 @@
     margin-top: 5vw;
     font-size: 2vw;
     font-family: var(--fontFamily);
+    font-weight: bolder;
     line-height: 3vw;
     margin-left: 17vw;
     margin-right: 17vw;
