--- a/pages/menu/logistics/logistics.css
+++ b/pages/menu/logistics/logistics.css
@@ -13,6 +13,7 @@
 
 .main-title {
     position: relative;
+    color: white;
     font-size: 5vw;
     color: var(--invitationHeaderColor);
     font-family: var(--fontFamily);
@@ -22,6 +23,7 @@
 
 .info-text {
     position: relative;
+    color: white;
     margin-top: 5vw;
     font-size: 2vw;
     font-family: var(--fontFamily);
