--- a/pages/home-page/countdown/countdown.component.css
+++ b/pages/home-page/countdown/countdown.component.css
@@ -92,6 +92,13 @@
     bottom: 0;
     right: -12vw;
   }
+
+  .start {
+    position: relative;
+    font-size: 10vw;
+    z-index: 1;
+    display: none;
+  }
   
   @media screen and (max-width: 8vw) {
     .count-down-timer {
